Some fixes for building wheels on different versions of Python: * Compile DLite with c11 (since Python 3.12 switched from c99 to c11) * Find NumPy library more robustly * Find cmake more robustly * Protect agains redefinition of HAVE_UINT8_T and co. on Python 3.13

--- a/src/utils/integers.h.in
+++ b/src/utils/integers.h.in
@@ -41,14 +41,30 @@
 #cmakedefine HAVE_STDINT_H
 #endif
 
+#ifndef HAVE_UINT8_T
 #cmakedefine HAVE_UINT8_T
+#endif
+#ifndef HAVE_UINT16_T
 #cmakedefine HAVE_UINT16_T
+#endif
+#ifndef HAVE_UINT32_T
 #cmakedefine HAVE_UINT32_T
+#endif
+#ifndef HAVE_UINT64_T
 #cmakedefine HAVE_UINT64_T
+#endif
+#ifndef HAVE_UINT128_T
 #cmakedefine HAVE_UINT128_T
+#endif
+#ifndef HAVE___UINT128_T
 #cmakedefine HAVE___UINT128_T
+#endif
+#ifndef HAVE_INT128_T
 #cmakedefine HAVE_INT128_T
+#endif
+#ifndef HAVE___INT128_T
 #cmakedefine HAVE___INT128_T
+#endif
 
 #cmakedefine HAVE_LONG_LONG
 #cmakedefine HAVE_INTMAX_T
