--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -15,7 +15,7 @@ build-frontend = "pip"
 build-verbosity = 1
 
 [tool.cibuildwheel.windows]
-before-test = "python -m pip install -r {project}\\requirements_dev.txt"
+before-test = "python -m pip install -r {project}\\requirements.txt -r {project}\\requirements_dev.txt"
 test-command = "python {package}\\..\\bindings\\python\\tests\\test_python_bindings.py"
 
 [tool.cibuildwheel.linux]
