--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,10 +1,9 @@
 [build-system]
 requires = [
-  "numpy>=1.14.5,<2.1.3",
+  # numpy>=2.1.0 fails with with "undefined symbol: PyMutex_Unlock" on Python 3.13
+  "numpy==2.0.2",
   "swig==4.3.0",
   "cmake==3.31.1",
-  #"setuptools==57.5.0; python_version<'3.9'",
-  #"setuptools==75.3.0; python_version>='3.9'",
   "setuptools==75.3.0",
   "wheel==0.41.3",
 ]
@@ -15,7 +14,7 @@ build-frontend = "pip"
 build-verbosity = 1
 
 [tool.cibuildwheel.windows]
-before-test = "python -m pip install -r {project}\\requirements.txt -r {project}\\requirements_dev.txt"
+before-test = "python -m pip install -r {project}\\requirements_dev.txt"
 test-command = "python {package}\\..\\bindings\\python\\tests\\test_python_bindings.py"
 
 [tool.cibuildwheel.linux]
