--- a/requirements_full.txt
+++ b/requirements_full.txt
@@ -21,8 +21,8 @@ pymongo>=4.4.0,<5
 #psycopg2>=2,<3
 
 # Utilities
-# Bug in pydantic 2.10.1, see https://github.com/pydantic/pydantic/issues/9898
-pydantic>=1.10.0,!=2.10.0,!=2.10.1,<2.10.2
+# Bug in pydantic 2.10.0, see https://github.com/pydantic/pydantic/issues/9898
+pydantic>=1.10.0,!=2.10.0,<2.10.4
 typing_extensions>=4.1,<5; python_version<'3.9'
 fortran-language-server>=1.12.0,<1.13
 
