--- a/requirements_full.txt
+++ b/requirements_full.txt
@@ -26,6 +26,9 @@ pydantic>=1.10.0,!=2.10.0,!=2.10.1,<2.10.2
 typing_extensions>=4.1,<5; python_version<'3.9'
 fortran-language-server>=1.12.0,<1.13
 
+# Requirements for running tests
+mongomock==4.3.0
+
 # For TEM demo
 ##matplotlib>=3,<4
 ##scikit-image>=0.19,<1
