--- a/storages/python/tests-python/CMakeLists.txt
+++ b/storages/python/tests-python/CMakeLists.txt
@@ -89,5 +89,5 @@ endforeach()
 
 # Skip minio test if the minio playground storage is full
 set_property(TEST test_minio PROPERTY
-  SKIP_REGULAR_EXPRESSION "XMinioStorageFull"
+  SKIP_REGULAR_EXPRESSION "(XMinioStorageFull)|(ConnectTimeoutError)"
 )
