Improve error reporting

--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -88,19 +88,28 @@ jobs:
     - name: Test
       env:
         DLITE_PYDEBUG: ""
-      run: ctest || ctest --rerun-failed --output-on-failure -V
+      run: |
+        ctest || \
+          ctest --rerun-failed --output-on-failure -V || \
+          cat Testing/Temporary/LastTest.log
       working-directory: build
 
     - name: Test with all behavior changes disabled
       env:
         DLITE_BEHAVIOR: OFF
-      run: ctest || ctest --rerun-failed --output-on-failure -V
+      run: |
+        ctest || \
+          ctest --rerun-failed --output-on-failure -V || \
+          cat Testing/Temporary/LastTest.log
       working-directory: build
 
     - name: Test with all behavior changes enabled
       env:
         DLITE_BEHAVIOR: ON
-      run: ctest || ctest --rerun-failed --output-on-failure -V
+      run: |
+        ctest || \
+          ctest --rerun-failed --output-on-failure -V || \
+          cat Testing/Temporary/LastTest.log
       working-directory: build
 
     - name: Build Linux wheel
