--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -67,8 +67,8 @@ macro(test_example example)
   set_property(TEST ${example}-config  PROPERTY DEPENDS ${example}-mkdir)
   set_property(TEST ${example}-build   PROPERTY DEPENDS ${example}-config)
   set_property(TEST ${example}-test    PROPERTY DEPENDS ${example}-build)
-  set_property(TEST ${example}-test
-    PROPERTY ENVIRONMENT LD_LIBRARY_PATH=${dlite_LD_LIBRARY_PATH_NATIVE}
+  set_property(TEST ${example}-test PROPERTY ENVIRONMENT
+    LD_LIBRARY_PATH="${dlite_LD_LIBRARY_PATH_NATIVE}:${Python3_LIBRARY_DIRS}"
   )
 endmacro()
 
