Corrected syntax for disabling test

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -76,7 +76,7 @@ macro(test_example example)
   #
   # error while loading shared libraries: libpython3.10.so.1.0: cannot open shared object file: No such file or directory
   #
-  set_property(TEST ${example}-test    PROPERTY DISABLED)
+  set_property(TEST ${example}-test    PROPERTY DISABLED True)
 endmacro()
 
 
