--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,10 +1,10 @@
 # Requirements building
 swig==4.3.0
-cmake==3.31.1
+cmake==3.31.2
 #setuptools==67.5.0; python_version<"3.9"
 #setuptools==75.3.0; python_version>="3.9"
 setuptools==75.3.0
-wheel==0.41.3
+wheel==0.45.1
 
 # Requirements for running tests
-mongomock==4.2.0.post1
+mongomock==4.3.0
