--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -71,7 +71,7 @@ foreach(test ${tests})
       ENVIRONMENT "WINEPATH=${dlite_WINEPATH_NATIVE}")
   endif()
 
-  if(NOT WIN32)
+  if(UNIX AND NOT APPLE)
     set_property(TEST ${test} APPEND PROPERTY
       ENVIRONMENT "LD_LIBRARY_PATH=${dlite_LD_LIBRARY_PATH_NATIVE}")
   endif()
