--- a/bindings/python/scripts/CMakeLists.txt
+++ b/bindings/python/scripts/CMakeLists.txt
@@ -11,8 +11,8 @@ function(test_success name)
   set_property(TEST ${name} PROPERTY
     ENVIRONMENT "PATH=${dlite_PATH_NATIVE}")
   set_property(TEST ${name} APPEND PROPERTY
-    ENVIRONMENT "PYTHONPATH=${dlite_PYTHONPATH}")
-  if (NOT WIN32)
+    ENVIRONMENT "PYTHONPATH=${dlite_PYTHONPATH_NATIVE}")
+  if (UNIX AND NOT APPLE)
     set_property(TEST ${name} APPEND PROPERTY
       ENVIRONMENT "LD_LIBRARY_PATH=${dlite_LD_LIBRARY_PATH_NATIVE}")
   endif()
