--- a/bindings/python/tests/CMakeLists.txt
+++ b/bindings/python/tests/CMakeLists.txt
@@ -46,8 +46,8 @@ foreach(test ${tests})
     ENVIRONMENT "PATH=${dlite_PATH_NATIVE}")
   set_property(TEST ${name} APPEND PROPERTY
     ENVIRONMENT "PYTHONPATH=${dlite_PYTHONPATH_NATIVE}")
-  if (NOT WIN32)
-  set_property(TEST ${name} APPEND PROPERTY
+  if (UNIX AND NOT APPLE)
+    set_property(TEST ${name} APPEND PROPERTY
     ENVIRONMENT "LD_LIBRARY_PATH=${dlite_LD_LIBRARY_PATH_NATIVE}")
   endif()
   set_property(TEST ${name} APPEND PROPERTY
