--- a/storages/python/tests-c/CMakeLists.txt
+++ b/storages/python/tests-c/CMakeLists.txt
@@ -112,8 +112,8 @@ foreach(test ${tests})
     ENVIRONMENT "PYTHONPATH=${dlite_PYTHONPATH_NATIVE}")
   set_property(TEST ${test} APPEND PROPERTY
     ENVIRONMENT "DLITE_USE_BUILD_ROOT=YES")
-  if (NOT WIN32)
-  set_property(TEST ${test} APPEND PROPERTY
+  if (UNIX AND NOT APPLE)
+    set_property(TEST ${test} APPEND PROPERTY
     ENVIRONMENT "LD_LIBRARY_PATH=${dlite_LD_LIBRARY_PATH_NATIVE}")
   endif()
   set_property(TEST ${test} APPEND PROPERTY
