--- a/storages/python/tests-python/CMakeLists.txt
+++ b/storages/python/tests-python/CMakeLists.txt
@@ -74,8 +74,8 @@ foreach(test ${python-tests})
     ENVIRONMENT "DLITE_PYDEBUG=")
   set_property(TEST ${test} APPEND PROPERTY
     ENVIRONMENT "DLITE_USE_BUILD_ROOT=YES")
-  if (NOT WIN32)
-  set_property(TEST ${test} APPEND PROPERTY
+  if (UNIX AND NOT APPLE)
+    set_property(TEST ${test} APPEND PROPERTY
     ENVIRONMENT "LD_LIBRARY_PATH=${dlite_LD_LIBRARY_PATH_NATIVE}")
   endif()
   set_property(TEST ${name} APPEND PROPERTY
