--- a/storages/rdf/tests/CMakeLists.txt
+++ b/storages/rdf/tests/CMakeLists.txt
@@ -33,8 +33,10 @@ foreach(test ${tests})
     ENVIRONMENT "PATH=${dlite_PATH_NATIVE}")
   set_property(TEST ${test} APPEND PROPERTY
     ENVIRONMENT "PYTHONPATH=${dlite_PYTHONPATH_NATIVE}")
-  set_property(TEST ${test} APPEND PROPERTY
+  if(UNIX AND NOT APPLE)
+    set_property(TEST ${test} APPEND PROPERTY
     ENVIRONMENT "LD_LIBRARY_PATH=${dlite_LD_LIBRARY_PATH_NATIVE}")
+  endif()
   set_property(TEST ${test} APPEND PROPERTY
     ENVIRONMENT "DLITE_USE_BUILD_ROOT=YES")
 
