Changed dlite_PATH to dlite_PATH_NATIVE in remaining locations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -837,11 +837,11 @@ string(REPLACE ";" "|" dlite_STORAGES_WINDOWS "${dlite_STORAGES_WINDOWS}")
 set(test_env
   "========== Test environment ========="
   "export DLITE_ROOT=${DLITE_ROOT}"
-  "export PATH=${dlite_PATH}"
-  "dlite_PATH_NATIVE=${dlite_PATH_NATIVE}"
+  "export PATH=${dlite_PATH_NATIVE}"
+  "dlite_PATH=${dlite_PATH}"
   "export LD_LIBRARY_PATH=${dlite_LD_LIBRARY_PATH}"
-  "export PYTHONPATH=${dlite_PYTHONPATH}"
-  "PYTHONPATH_NATIVE=${dlite_PYTHONPATH_NATIVE}"
+  "export PYTHONPATH=${dlite_PYTHONPATH_NATIVE}"
+  "PYTHONPATH=${dlite_PYTHONPATH}"
   "export DLITE_STORAGE_PLUGIN_DIRS=${dlite_STORAGE_PLUGINS}"
   "export DLITE_MAPPING_PLUGIN_DIRS=${dlite_MAPPING_PLUGINS}"
   "export DLITE_PYTHON_STORAGE_PLUGIN_DIRS=${dlite_PYTHON_STORAGE_PLUGINS}"
