macOS check symbol, type updates

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -11,19 +11,24 @@ project(dlite-src-utils C)
 
 # -- check for headers
 include(CheckIncludeFile)
-check_include_file(stdarg.h     HAVE_STDARG_H)
-check_include_file(stddef.h     HAVE_STDDEF_H)
-check_include_file(stdint.h     HAVE_STDINT_H)
-check_include_file(stdlib.h     HAVE_STDLIB_H)
-check_include_file(float.h      HAVE_FLOAT_H)
-check_include_file(inttypes.h   HAVE_INTTYPES_H)
-check_include_file(endian.h     HAVE_ENDIAN_H)
-check_include_file(byteswap.h   HAVE_BYTESWAP_H)
-check_include_file(locale.h     HAVE_LOCALE_H)
-check_include_file(time.h       HAVE_TIME_H)
-check_include_file(unistd.h     HAVE_UNISTD_H)
-check_include_file(windows.h    HAVE_WINDOWS_H)  # Windows-specific
-check_include_file(io.h         HAVE_IO_H)       # Windows-specific
+check_include_file(stdarg.h                  HAVE_STDARG_H)
+check_include_file(stddef.h                  HAVE_STDDEF_H)
+check_include_file(stdint.h                  HAVE_STDINT_H)
+check_include_file(stdlib.h                  HAVE_STDLIB_H)
+check_include_file(float.h                   HAVE_FLOAT_H)
+check_include_file(inttypes.h                HAVE_INTTYPES_H)
+if(APPLE)
+  check_include_file(machine/endian.h        HAVE_ENDIAN_H)
+  check_include_file(libkern/OSByteOrder.h   HAVE_BYTESWAP_H)
+else()
+  check_include_file(endian.h                HAVE_ENDIAN_H)
+  check_include_file(byteswap.h              HAVE_BYTESWAP_H)
+endif()
+check_include_file(locale.h                  HAVE_LOCALE_H)
+check_include_file(time.h                    HAVE_TIME_H)
+check_include_file(unistd.h                  HAVE_UNISTD_H)
+check_include_file(windows.h                 HAVE_WINDOWS_H)  # Windows-specific
+check_include_file(io.h                      HAVE_IO_H)       # Windows-specific
 
 # -- check for symbols
 set(CMAKE_C_FLAGS_saved ${CMAKE_C_FLAGS})
@@ -33,79 +38,79 @@ if(CMAKE_COMPILER_IS_GNUCC)
 endif()
 
 include(CheckSymbolExists)
-check_symbol_exists(strdup              string.h     HAVE_STRDUP)
-check_symbol_exists(_strdup             string.h     HAVE__STRDUP)
-check_symbol_exists(strndup             string.h     HAVE_STRNDUP)
-check_symbol_exists(_strndup            string.h     HAVE__STRNDUP)
-check_symbol_exists(strcasecmp          string.h     HAVE_STRCASECMP)
-check_symbol_exists(_stricmp            string.h     HAVE__STRICMP)
-check_symbol_exists(strncasecmp         string.h     HAVE_STRNCASECMP)
-check_symbol_exists(_strnicmp           string.h     HAVE__STRNICMP)
+check_symbol_exists(strdup              "string.h;_string.h"     HAVE_STRDUP)
+check_symbol_exists(_strdup             "string.h;_string.h"     HAVE__STRDUP)
+check_symbol_exists(strndup             "string.h;_string.h"     HAVE_STRNDUP)
+check_symbol_exists(_strndup            "string.h;_string.h"     HAVE__STRNDUP)
+check_symbol_exists(strcasecmp          "string.h;_string.h"     HAVE_STRCASECMP)
+check_symbol_exists(_stricmp            "string.h;_string.h"     HAVE__STRICMP)
+check_symbol_exists(strncasecmp         "string.h;_string.h"     HAVE_STRNCASECMP)
+check_symbol_exists(_strnicmp           "string.h;_string.h"     HAVE__STRNICMP)
 
-check_symbol_exists(setenv              stdlib.h     HAVE_SETENV)
-check_symbol_exists(_putenv_s           stdlib.h     HAVE__PUTENV_S)
-check_symbol_exists(unsetenv            stdlib.h     HAVE_UNSETENV)
+check_symbol_exists(setenv              "stdlib.h;_stdlib.h"     HAVE_SETENV)
+check_symbol_exists(_putenv_s           stdlib.h                 HAVE__PUTENV_S)
+check_symbol_exists(unsetenv            "stdlib.h;_stdlib.h"     HAVE_UNSETENV)
 
-check_symbol_exists(realpath            stdlib.h     HAVE_REALPATH)
-check_symbol_exists(stat                sys/stat.h   HAVE_STAT)
-check_symbol_exists(exec                unistd.h     HAVE_EXEC)
-check_symbol_exists(clock               time.h       HAVE_CLOCK)
-check_symbol_exists(P_tmpdir            stdio.h      HAVE_P_TMPDIR)
-check_symbol_exists(_fileno             stdio.h      HAVE__FILENO)
-check_symbol_exists(isatty              unistd.h     HAVE_ISATTY)
-check_symbol_exists(_isatty             io.h         HAVE__ISATTY)
+check_symbol_exists(realpath            "stdlib.h;_stdlib.h"     HAVE_REALPATH)
+check_symbol_exists(stat                sys/stat.h               HAVE_STAT)
+# check_symbol_exists(exec              unistd.h                 HAVE_EXEC) // TODO: Remove - seems unused
+check_symbol_exists(clock               "time.h;_time.h"         HAVE_CLOCK)
+check_symbol_exists(P_tmpdir            "stdio.h;_stdio.h"       HAVE_P_TMPDIR)
+check_symbol_exists(_fileno             "stdio.h;_stdio.h"       HAVE__FILENO)
+check_symbol_exists(isatty              unistd.h                 HAVE_ISATTY)
+check_symbol_exists(_isatty             io.h                     HAVE__ISATTY)
 
 if(HAVE_WINDOWS_H)
-check_symbol_exists(GetFullPathNameW    windows.h    HAVE_GetFullPathNameW)
-check_symbol_exists(GetFullPathName     windows.h    HAVE_GetFullPathName)
-check_symbol_exists(GetFileAttributesW  windows.h    HAVE_GetFileAttributesW)
-check_symbol_exists(GetFileAttributes   windows.h    HAVE_GetFileAttributes)
+check_symbol_exists(GetFullPathNameW    windows.h                HAVE_GetFullPathNameW)
+check_symbol_exists(GetFullPathName     windows.h                HAVE_GetFullPathName)
+check_symbol_exists(GetFileAttributesW  windows.h                HAVE_GetFileAttributesW)
+check_symbol_exists(GetFileAttributes   windows.h                HAVE_GetFileAttributes)
 endif()
 
 list(APPEND CMAKE_REQUIRED_LIBRARIES shlwapi.lib)
-check_symbol_exists(PathFileExistsW     shlwapi.h    HAVE_PathFileExistsW)
-check_symbol_exists(PathFileExists      shlwapi.h    HAVE_PathFileExists)
+check_symbol_exists(PathFileExistsW     shlwapi.h                HAVE_PathFileExistsW)
+check_symbol_exists(PathFileExists      shlwapi.h                HAVE_PathFileExists)
 list(REMOVE_ITEM CMAKE_REQUIRED_LIBRARIES shlwapi.lib)
 
-check_symbol_exists(CreateProcessA      processthreadsapi.h HAVE_CreateProcessA)
-check_symbol_exists(GetSystemTime       windows.h    HAVE_GetSystemTime)
-check_symbol_exists(BCryptGenRandom     bcrypt.h     HAVE_BCryptGenRandom)
+check_symbol_exists(CreateProcessA      processthreadsapi.h      HAVE_CreateProcessA)
+check_symbol_exists(GetSystemTime       windows.h                HAVE_GetSystemTime)
+check_symbol_exists(BCryptGenRandom     bcrypt.h                 HAVE_BCryptGenRandom)
 
-check_symbol_exists(mbstowcs            stdlib.h     HAVE_MBSTOWCS)
-check_symbol_exists(wcstombs            stdlib.h     HAVE_WCSTOMBS)
-check_symbol_exists(mbstowcs_s          stdlib.h     HAVE_MBSTOWCS_S)
-check_symbol_exists(wcstombs_s          stdlib.h     HAVE_WCSTOMBS_S)
+check_symbol_exists(mbstowcs            "stdlib.h;_stdlib.h"     HAVE_MBSTOWCS)
+check_symbol_exists(wcstombs            "stdlib.h;_stdlib.h"     HAVE_WCSTOMBS)
+check_symbol_exists(mbstowcs_s          "stdlib.h;_stdlib.h"     HAVE_MBSTOWCS_S)
+check_symbol_exists(wcstombs_s          "stdlib.h;_stdlib.h"     HAVE_WCSTOMBS_S)
 
-check_symbol_exists(strlcpy             string.h     HAVE_STRLCPY)
-check_symbol_exists(strlcat             string.h     HAVE_STRLCAT)
+check_symbol_exists(strlcpy             "string.h;_string.h"     HAVE_STRLCPY)
+check_symbol_exists(strlcat             "string.h;_string.h"     HAVE_STRLCAT)
 
-check_symbol_exists(getopt              unistd.h     HAVE_GETOPT)
-check_symbol_exists(getopt_long         getopt.h     HAVE_GETOPT_LONG)
+check_symbol_exists(getopt              unistd.h                 HAVE_GETOPT)
+check_symbol_exists(getopt_long         getopt.h                 HAVE_GETOPT_LONG)
 
 # snprintf() is broken on windows - use own implementation there
 if(NOT WIN32)
-check_symbol_exists(snprintf            stdio.h      HAVE_SNPRINTF)
-check_symbol_exists(_snprintf           stdio.h      HAVE__SNPRINTF)
-check_symbol_exists(vsnprintf           stdio.h      HAVE_VSNPRINTF)
-check_symbol_exists(_vsnprintf          stdio.h      HAVE__VSNPRINTF)
-check_symbol_exists(asprintf            stdio.h      HAVE_ASPRINTF)
-check_symbol_exists(_asprintf           stdio.h      HAVE__ASPRINTF)
-check_symbol_exists(vasprintf           stdio.h      HAVE_VASPRINTF)
-check_symbol_exists(_vasprintf          stdio.h      HAVE__VASPRINTF)
-check_symbol_exists(asnprintf           stdio.h      HAVE_ASPPRINTF)
-check_symbol_exists(asnprintf           stdio.h      HAVE_ASPPRINTF)
+check_symbol_exists(snprintf            "stdio.h;secure/_stdio.h" HAVE_SNPRINTF)
+check_symbol_exists(_snprintf           "stdio.h;_stdio.h"       HAVE__SNPRINTF)
+check_symbol_exists(vsnprintf           "stdio.h;secure/_stdio.h" HAVE_VSNPRINTF)
+check_symbol_exists(_vsnprintf          "stdio.h;_stdio.h"       HAVE__VSNPRINTF)
+check_symbol_exists(asprintf            "stdio.h;_stdio.h"       HAVE_ASPRINTF)
+check_symbol_exists(_asprintf           "stdio.h;_stdio.h"       HAVE__ASPRINTF)
+check_symbol_exists(vasprintf           "stdio.h;_stdio.h"       HAVE_VASPRINTF)
+check_symbol_exists(_vasprintf          "stdio.h;_stdio.h"       HAVE__VASPRINTF)
+check_symbol_exists(asnprintf           "stdio.h;_stdio.h"       HAVE_ASPPRINTF)
+check_symbol_exists(asnprintf           "stdio.h;_stdio.h"       HAVE_ASPPRINTF)
 endif()
-check_symbol_exists(localeconv          locale.h     HAVE__LOCALECONV)
-check_symbol_exists(va_copy             stdarg.h     HAVE_VA_COPY)
-check_symbol_exists(__va_copy           stdarg.h     HAVE___VA_COPY)
+check_symbol_exists(localeconv          locale.h                 HAVE_LOCALECONV)
+check_symbol_exists(va_copy             stdarg.h                 HAVE_VA_COPY)
+check_symbol_exists(__va_copy           stdarg.h                 HAVE___VA_COPY)
 
 # C11 mutex
-check_symbol_exists(mtx_init            threads.h    HAVE_MTX_INIT)
-check_symbol_exists(mtx_lock            threads.h    HAVE_MTX_LOCK)
-check_symbol_exists(mtx_timedlock       threads.h    HAVE_MTX_TIMEDLOCK)
-check_symbol_exists(mtx_trylock         threads.h    HAVE_MTX_TRYLOCK)
-check_symbol_exists(mtx_unlock          threads.h    HAVE_MTX_UNLOCK)
-check_symbol_exists(mtx_destroy         threads.h    HAVE_MTX_DESTROY)
+check_symbol_exists(mtx_init            threads.h                HAVE_MTX_INIT)
+check_symbol_exists(mtx_lock            threads.h                HAVE_MTX_LOCK)
+check_symbol_exists(mtx_timedlock       threads.h                HAVE_MTX_TIMEDLOCK)
+check_symbol_exists(mtx_trylock         threads.h                HAVE_MTX_TRYLOCK)
+check_symbol_exists(mtx_unlock          threads.h                HAVE_MTX_UNLOCK)
+check_symbol_exists(mtx_destroy         threads.h                HAVE_MTX_DESTROY)
 
 
 
@@ -212,20 +217,33 @@ else()
   test_big_endian(IS_BIG_ENDIAN)
 endif()
 
-check_symbol_exists(bswap_16 byteswap.h HAVE_BSWAP_16)
-check_symbol_exists(bswap_32 byteswap.h HAVE_BSWAP_32)
-check_symbol_exists(bswap_64 byteswap.h HAVE_BSWAP_64)
-check_symbol_exists(bswap_128 byteswap.h HAVE_BSWAP_128)
+if(APPLE)
+  check_symbol_exists(OSSwapInt16 libkern/OSByteOrder.h HAVE_BSWAP_16)
+  check_symbol_exists(OSSwapInt32 libkern/OSByteOrder.h HAVE_BSWAP_32)
+  check_symbol_exists(OSSwapInt64 libkern/OSByteOrder.h HAVE_BSWAP_64)
+  check_symbol_exists(OSSwapInt128 libkern/OSByteOrder.h HAVE_BSWAP_128)
+
+  check_symbol_exists(OSSwapHostToBigInt16 libkern/OSByteOrder.h HAVE_HTOBE16)
+  check_symbol_exists(OSSwapHostToBigInt32 libkern/OSByteOrder.h HAVE_HTOBE32)
+  check_symbol_exists(OSSwapHostToBigInt64 libkern/OSByteOrder.h HAVE_HTOBE64)
+  check_symbol_exists(OSSwapHostToBigInt128 libkern/OSByteOrder.h HAVE_HTOBE128)
+else()
+  check_symbol_exists(bswap_16 byteswap.h HAVE_BSWAP_16)
+  check_symbol_exists(bswap_32 byteswap.h HAVE_BSWAP_32)
+  check_symbol_exists(bswap_64 byteswap.h HAVE_BSWAP_64)
+  check_symbol_exists(bswap_128 byteswap.h HAVE_BSWAP_128)
+  
+  check_symbol_exists(htobe16 endian.h HAVE_HTOBE16)
+  check_symbol_exists(htobe32 endian.h HAVE_HTOBE32)
+  check_symbol_exists(htobe64 endian.h HAVE_HTOBE64)
+  check_symbol_exists(htobe128 endian.h HAVE_HTOBE128)
+endif()
 
 check_symbol_exists(_byteswap_ushort stdlib.h HAVE__BYTESWAP_USHORT)
 check_symbol_exists(_byteswap_ulong  stdlib.h HAVE__BYTESWAP_ULONG)
 check_symbol_exists(_byteswap_uint64 stdlib.h HAVE__BYTESWAP_UINT64)
 check_symbol_exists(_byteswap_uint128 stdlib.h HAVE__BYTESWAP_UINT128)
 
-check_symbol_exists(htobe16 endian.h HAVE_HTOBE16)
-check_symbol_exists(htobe32 endian.h HAVE_HTOBE32)
-check_symbol_exists(htobe64 endian.h HAVE_HTOBE64)
-check_symbol_exists(htobe128 endian.h HAVE_HTOBE128)
 
 configure_file(byteorder.h.in byteorder.h)
 
@@ -243,22 +261,28 @@ configure_file(boolean.h.in boolean.h)
 
 # Generate integers.h
 # -------------------
-check_type_size("long double"             HAVE_LONG_DOUBLE)
-check_type_size("long long int"           HAVE_LONG_LONG_INT)
-check_type_size("unsigned long long int"  HAVE_UNSIGNED_LONG_LONG_INT)
-check_type_size(uint8_t                   HAVE_UINT8_T)
-check_type_size(uint16_t                  HAVE_UINT16_T)
-check_type_size(uint32_t                  HAVE_UINT32_T)
-check_type_size(uint64_t                  HAVE_UINT64_T)
-check_type_size(uint128_t                 HAVE_UINT128_T)
-check_type_size(__uint128_t               HAVE___UINT128_T)
-check_type_size(int128_t                  HAVE_INT128_T)
-check_type_size(__int128_t                HAVE___INT128_T)
-check_type_size(intmax_t                  HAVE_INTMAX_T)
-check_type_size(uintmax_t                 HAVE_UINTMAX_T)
-check_type_size(uintptr_t                 HAVE_UINTPTR_T)
-check_type_size(ptrdiff_t                 HAVE_PTRDIFF_T)
-set(CMAKE_REQUIRED_INCLUDES stdlib.h)
+# Note: Some of this is used in config.h
+# Does not use HAVE_ variable names as HAVE_ is prepended to
+# variable name automatically and set as a bool equal to the type
+# existing or not. If multiple architectures possible, the variable
+# name (without the HAVE_ prefix) can be a value of 0 - usually on
+# MacOS/Apple as fat binaries are possible.
+check_type_size("long double"             LONG_DOUBLE)
+check_type_size("long long int"           LONG_LONG_INT)
+check_type_size("unsigned long long int"  UNSIGNED_LONG_LONG_INT)
+check_type_size(uint8_t                   UINT8_T)
+check_type_size(uint16_t                  UINT16_T)
+check_type_size(uint32_t                  UINT32_T)
+check_type_size(uint64_t                  UINT64_T)
+check_type_size(uint128_t                 UINT128_T)
+check_type_size(__uint128_t               __UINT128_T)
+check_type_size(int128_t                  INT128_T)
+check_type_size(__int128_t                __INT128_T)
+check_type_size(intmax_t                  INTMAX_T)
+check_type_size(uintmax_t                 UINTMAX_T)
+check_type_size(uintptr_t                 UINTPTR_T)
+check_type_size(ptrdiff_t                 PTRDIFF_T)
+set(CMAKE_REQUIRED_INCLUDES "stdlib.h;_stdlib.h")
 check_type_size(size_t                    HAVE_SIZE_T)
 unset(CMAKE_REQUIRED_INCLUDES)
 
