--- a/requirements_full.txt
+++ b/requirements_full.txt
@@ -23,7 +23,9 @@ urllib3>=1.0.0,<2
 
 # Utilities
 # Bug in pydantic 2.10.0, see https://github.com/pydantic/pydantic/issues/9898
-pydantic>=1.10.0,!=2.10.0,<2.10.4
+annotated-types>=0.5.0,<0.8.0
+pydantic>=1.10.0,!=2.10.0,!=2.10.1,<2.10.6
+pydantic-core>=0.42,<2.27.3
 typing_extensions>=4.1,<5; python_version<'3.9'
 fortran-language-server>=1.12.0,<1.13
 
